tests/type_errors/length_on_map.nos
# expect_error: use .size() for Map
# length() does not work on Map - use .size() instead
main() = {
    m = Map.fromList([("a", 1)])
    length(m)
}
